Fixing issue with content scrolling over header with z-index and footer covering content by adding  margin-bottom to the body

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -6,6 +6,7 @@
   background-color: #1F6BEF;
   padding: 20px;
   width: 100%;
+  z-index:1;
 }
 
 ul {
@@ -106,6 +107,9 @@ th {
   width: 60%;
   height: 100%;
   display: block;
+  top: 0;
+  bottom: 0;
+  z-index:2;
 }
 
 
@@ -150,16 +154,7 @@ label {
 }
 
 
-/*footer*/
 
-.footer, .social-media {
-    text-align: center;
-    bottom: 0;
-    position: fixed;
-    background-color: #1F6BEF;
-    width: 100%;
-    padding-top: 30px;
-  }
 
   /*scaffold*/
 
@@ -168,7 +163,9 @@ label {
     color: #333;
     font-family: verdana, arial, helvetica, sans-serif;
     font-size: 13px;
-    line-height: 18px;
+    min-height: 400px;
+    margin-bottom: 150px;
+    clear: both;
   }
 
   p, ol, ul, td {
@@ -267,3 +264,15 @@ label {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
 }
+
+/*footer*/
+
+.footer, .social-media {
+    text-align: center;
+    bottom: 0;
+    position: fixed;
+    background-color: #1F6BEF;
+    width: 100%;
+    padding-top: 30px;
+    z-index: 3;
+  }
